@@ -1,3 +1,11 @@
+2012-11-01  Anders Carlsson  <andersca@apple.com>
+
+        Reformat the annotationStyle initializer to appease update-webkit-localizable-strings.
+
+        Rubber-stamped by Dan Bernstein.
+
+        * WebProcess/Plugins/PDF/PDFPlugin.mm:
+
 2012-11-01  Alexandru Chiculita  <achicu@adobe.com>
 
         [CSS Shaders] Move MeshBoxType out of CustomFilterOperation
